# lazy_imports

./: README.md  pyproject.toml
lazy_imports/: lazy_imports.py
tests/: test_lazy_imports.py
