[tool.poetry]
name = "lazy_imports"
version = "0.1.0"
description = "Explicit lazy imports for Python"
authors = ["Carlos Gottberg"]
license = "BSD"
readme = "README.md"
packages = [{include = "lazy_imports"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["lazy_imports"]
